2021-02-11 Shahzad Muzaffar  <@smuzaffar>
	V06-01-17 Looks like setting LD_PRELOAD=libasan.so hangs a lot of
	system commands. Revert the changes and explicitly set LD_PRELOAD
	while running dd4hep and unit tests
2021-02-10 Shahzad Muzaffar  <@smuzaffar>
	V06-01-15 Set LD_PRELOAD for [A|UB|T|SAN IBs
	V06-01-16 Set LD_PRELOAD for *SAN from gcc toolfile
2021-02-09 Shahzad Muzaffar  <@smuzaffar>
	V06-01-14 Remove GCC8 compiler condition for ASAN/UBSAN IBs
2021-02-08 Shahzad Muzaffar  <@smuzaffar>
	V06-01-13 Do not run dxr for generated genrated files
2021-02-01 Shahzad Muzaffar  <@smuzaffar>
	V06-01-12 Allow to override dd4hep listcomponents via toolfile flag
	LISTCOMPONENTS
2021-01-21 Shahzad Muzaffar  <@smuzaffar>
	V06-01-11 use scram if SCRAM not set. set LC_ALL to avoid perl
	warninsg on cc8
2021-01-11 Shahzad Muzaffar  <@smuzaffar>
	V06-01-10 Runtime hook updated to drop data externals for release
2020-10-19 Shahzad Muzaffar  <@smuzaffar>
	V06-01-08 Allow to provide flags for header checks use
	HEADER_CHECKS flag in BuildFile
	V06-01-09 Do not drop Optimization flags. GCC9 seems to work with
	-Ox flags for header checks.
2020-10-19 Shahzad Muzaffar  <@smuzaffar>
	V06-01-07 Support haswell sandybridge nehalem vectorization.
	Creat symlinks for under externals?arch/lib/<vectorization>
2020-09-29 Shahzad Muzaffar  <@smuzaffar>
	V06-01-06: For full build also remove externals/bin path
2020-09-28 Shahzad Muzaffar  <@smuzaffar>
	V06-01-05: Uses system cuda if system cuda version is >= cms cuda
2020-09-17 Shahzad Muzaffar  <@smuzaffar>
	V06-01-03: Export dependencies for header only packages too.
	V06-01-04: Adding <flags PYTHON_VERSION="3"/> in
	package/python/BuildFile.xml allows scram to compile that package with
	python3.
2020-09-15 Shahzad Muzaffar  <@smuzaffar>
	V06-00-08: Implementation of projectInfo for SCRAMV3
	V06-01-00: Do nit delete perl/python scripts. Use the correct version
	based on scram version
	V06-01-01: Generate PCM for header only packages too