@@ -1,3 +1,5 @@
+2021-02-16 Shahzad Muzaffar  <@smuzaffar>
+        V06-01-18 Make sure to set RuntimeCache.json to avoid recreation.
 2021-02-11 Shahzad Muzaffar  <@smuzaffar>
 	V06-01-17 Looks like setting LD_PRELOAD=libasan.so hangs a lot of
 	system commands. Revert the changes and explicitly set LD_PRELOAD
